[package]
name = "namedpipe"
version = "0.1.0"
edition = "2021"


[profile.dev]
debug-assertions = false

[profile.release]
debug-assertions = false # required to avoid misaligned pointer dereference panics
strip = true 

[dependencies]
dinvoke_rs = {version="=0.2.0"}
litcrypt2 = "=0.1.2"

[dependencies.windows]
version = "0.51"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System",
    "Win32_System_IO",
    "Win32_System_Kernel",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_WindowsProgramming",
    "Wdk_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_Graphics",
    "Win32_Graphics_Printing",
    "Win32_Graphics_Gdi"
]